--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ ul {
     backdrop-filter: blur(3px);
     border: 2px solid rgba(30, 30, 30, 0.2);
     width: fit-content;
-    height: fit-content;
+    height: 70vh;
     padding: 24px 48px;
     display: flex;
     flex-direction: column;
@@ -57,6 +57,7 @@ ul {
 
 .card h1 {
     font-size: 3rem;
+    font-family: Snell Roundhand;
 }
 
 .footer {
